Added more detailed anaylsis and EDA for the ICLR dataset, including getting access to the subfields for the paper information and the first review

--- a/Pipeline.ipynb
+++ b/Pipeline.ipynb
@@ -37,7 +37,7 @@
    "id": "9a622681",
    "metadata": {},
    "source": [
-    "### EDA: Rewview_mt dataset (not useful for now)"
+    "### EDA: Review_mt dataset (not useful for now)"
    ]
   },
   {
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "93d76bf4",
    "metadata": {},
    "outputs": [
@@ -747,7 +747,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 27,
+   "id": "6d1f89b3",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'Summary'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mKeyError\u001b[39m                                  Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[27]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33mTest\u001b[39m\u001b[33m\"\u001b[39m, \u001b[43mexample_train\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mSummary\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m]\u001b[49m)\n",
+      "\u001b[31mKeyError\u001b[39m: 'Summary'"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Test\", example_train[\"Summary\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9a09d348",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
    "id": "4f279a84",
    "metadata": {},
    "outputs": [
@@ -766,7 +796,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 25,
    "id": "c80d4cb7",
    "metadata": {},
    "outputs": [
@@ -1404,6 +1434,47 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 45,
+   "id": "3063b27c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import re\n",
+    "\n",
+    "def parse_input_sections(text: str) -> dict:\n",
+    "    pattern = r\"Title:\\s*(.*?)\\s*Abstract:\\s*(.*?)\\s*Main Text:\\s*(.*)\"\n",
+    "    match = re.match(pattern, text, re.DOTALL)\n",
+    "    if match:\n",
+    "        return {\n",
+    "            \"title\": match.group(1).strip(),\n",
+    "            \"abstract\": match.group(2).strip(),\n",
+    "            \"main_text\": match.group(3).strip()\n",
+    "        }\n",
+    "    else:\n",
+    "        raise ValueError(\"Input text does not match expected pattern.\")\n",
+    "\n",
+    "def parse_review_sections(text: str) -> dict:\n",
+    "    \"\"\"\n",
+    "    Parse a review into 'Summary', 'Strengths and Weaknesses', and optionally 'Questions'.\n",
+    "    \"\"\"\n",
+    "    pattern = (\n",
+    "        r\"Summary:\\s*(.*?)\\s*\"\n",
+    "        r\"Strengths and Weaknesses:\\s*(.*?)(?:\\s*Questions:\\s*(.*))?$\"\n",
+    "    )\n",
+    "    match = re.match(pattern, text, re.DOTALL)\n",
+    "    if not match:\n",
+    "        raise ValueError(\"Review does not match expected format.\")\n",
+    "    \n",
+    "    result = {\n",
+    "        \"summary\": match.group(1).strip(),\n",
+    "        \"strengths_and_weaknesses\": match.group(2).strip(),\n",
+    "        \"questions\": match.group(3).strip() if match.group(3) else None\n",
+    "    }\n",
+    "    return result"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 8,
    "id": "c0fe20c0",
    "metadata": {},
@@ -2028,6 +2099,36 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 33,
+   "id": "97c0c026",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Title:\n",
+      " Characterizing and Measuring the Similarity of Neural Networks with Persistent Homology .\n",
+      "\n",
+      "Abstract:\n",
+      " Characterizing the structural properties of neural networks is crucial yet poorly understood, and there are no well-established similarity measures between networks. In this work, we observe that neural networks can be represented as abstract simplicial complex and analyzed using their topological 'fingerprints' via Persistent Homology (PH). We then describe a PH-based representation proposed for characterizing and measuring similarity of neural networks. We empirically show the effectiveness of this representation as a descriptor of different architectures in several datasets. This approach based on Topological Data Analysis is a step towards better understanding neural networks and a useful similarity measure.\n",
+      "\n",
+      "Main Text:\n",
+      " Introduction\n",
+      "\n",
+      "Machine learning practitioners can train different neural networks for the same task. Even for the same neural architecture, there are many hyperparameters, such as the number of neurons per layer or the number of layers. Moreover, the final weights for the same architecture and hyperparameters can vary depending on the initialization and the optimization process itself, which is stochastic. Thus, there is no direct way of comparing neural networks accounting for the fact that neur ...\n"
+     ]
+    }
+   ],
+   "source": [
+    "sections = parse_input_sections(example_train[\"input\"])\n",
+    "print(\"Title:\\n\", sections[\"title\"])\n",
+    "print(\"\\nAbstract:\\n\", sections[\"abstract\"])\n",
+    "print(\"\\nMain Text:\\n\", sections[\"main_text\"][:500], \"...\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 10,
    "id": "ff232b6b",
    "metadata": {},
@@ -2115,6 +2216,58 @@
    ],
    "source": [
     "print(example_test[\"history\"][0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "ad351484",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Summary: The paper combines the idea from the classical hidden dirichlet processe and CGMM to automate the process of selecting the hyperparameters of CGMM.\n",
+      "Interesting idea but not very impressive experimental results. Strengths and Weaknesses: The authors propose an interesting idea of utilizing the HDP framework to obtain the number of latent variables at each layer. HOwever the gain in the accuracy seems either non-existent or marginal.\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(example_test[\"history\"][0][1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "99ad9e41",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Summary:\n",
+      " The paper combines the idea from the classical hidden dirichlet processe and CGMM to automate the process of selecting the hyperparameters of CGMM.\n",
+      "Interesting idea but not very impressive experimental results.\n",
+      "\n",
+      "Strengths and Weaknesses:\n",
+      " The authors propose an interesting idea of utilizing the HDP framework to obtain the number of latent variables at each layer. HOwever the gain in the accuracy seems either non-existent or marginal.\n",
+      "\n",
+      "Questions: Not provided\n"
+     ]
+    }
+   ],
+   "source": [
+    "review_text = example_test[\"history\"][0][1]\n",
+    "sections = parse_review_sections(review_text)\n",
+    "\n",
+    "print(\"Summary:\\n\", sections[\"summary\"])\n",
+    "print(\"\\nStrengths and Weaknesses:\\n\", sections[\"strengths_and_weaknesses\"])\n",
+    "if sections[\"questions\"]:\n",
+    "    print(\"\\nQuestions:\\n\", sections[\"questions\"])\n",
+    "else:\n",
+    "    print(\"\\nQuestions: Not provided\")"
    ]
   },
   {
