adjusted notebook code for better clarity as well as basic implementation of dataloader to get data in the proper format

--- a/data_loader/sample_testing/paper_docling_json.ipynb
+++ b/data_loader/sample_testing/paper_docling_json.ipynb
@@ -480,6 +480,147 @@
     "else:\n",
     "    print(\"paper.docling.json not found.\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "504f2bf0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def reconstruct_full_paper(docling_data: dict) -> str:\n",
+    "    \"\"\"\n",
+    "    Reconstruct the full paper text from the docling-formatted JSON.\n",
+    "\n",
+    "    Args:\n",
+    "        docling_data (dict): Parsed JSON data from paper.docling.json.\n",
+    "\n",
+    "    Returns:\n",
+    "        str: The full concatenated text of the paper.\n",
+    "    \"\"\"\n",
+    "    texts = docling_data.get(\"texts\", [])\n",
+    "    full_text = \"\\n\\n\".join(t.get(\"text\", \"\") for t in texts if \"text\" in t and t[\"text\"].strip())\n",
+    "    return full_text.strip()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "64d491c2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "🧾 Full paper preview (first 10000 characters):\n",
+      "Impact of Co-occurrence on Factual Knowledge of Large Language Models\n",
+      "\n",
+      "Cheongwoong Kang\n",
+      "\n",
+      "KAIST\n",
+      "\n",
+      "cw.kang@kaist.ac.kr\n",
+      "\n",
+      "Abstract\n",
+      "\n",
+      "Large language models (LLMs) often make factually incorrect responses despite their success in various applications. In this paper, we hypothesize that relying heavily on simple cooccurrence statistics of the pre-training corpora is one of the main factors that cause factual errors. Our results reveal that LLMs are vulnerable to the co-occurrence bias, defined as preferring frequently co-occurred words over the correct answer. Consequently, LLMs struggle to recall facts whose subject and object rarely co-occur in the pre-training dataset although they are seen during finetuning. We show that co-occurrence bias remains despite scaling up model sizes or finetuning. Therefore, we suggest finetuning on a debiased dataset to mitigate the bias by filtering out biased samples whose subject-object co-occurrence count is high. Although debiased finetuning allows LLMs to memorize rare facts in the training set, it is not effective in recalling rare facts unseen during finetuning. Further research in mitigation will help build reliable language models by preventing potential errors. The code is available at https://github.com/CheongWoong/ impact_of_cooccurrence .\n",
+      "\n",
+      "1 Introduction\n",
+      "\n",
+      "Natural language processing has seen significant progress in recent years with the advent of large language models (LLMs) (Devlin et al., 2019; Brown et al., 2020; Raffel et al., 2020). Factual knowledge probing benchmarks like LAMA have demonstrated that LLMs have a high capacity to recall factual knowledge (Petroni et al., 2019; Jiang et al., 2020; Roberts et al., 2020; Shin et al., 2020; Zhong et al., 2021). However, factual knowledge stored in LLMs may not always be correct (Elazar et al., 2021; Cao et al., 2021). Understanding the reasons behind such inaccuracies is critical for developing more accurate and reliable language models. Recent studies point out that LLMs often learn short-\n",
+      "\n",
+      "Jaesik Choi KAIST\n",
+      "\n",
+      "jaesik.choi@kaist.ac.kr\n",
+      "\n",
+      "Figure 1: This figure shows an overall framework of our correlation analysis between co-occurrence counts and factual knowledge of LLMs. We assume that if the target model heavily relies on subject-object co-occurrence, it is more likely to recall the most co-occurring word without accurate semantic understanding. For instance, in this hypothetical example, the model fails to answer the question about the capital of Canada by generating the most frequently co-occurring word 'Toronto', while the correct answer is 'Ottawa'. This indicates that relying heavily on co-occurrence statistics may have potential errors.\n",
+      "\n",
+      "The capital of\n",
+      "\n",
+      "Canada\n",
+      "\n",
+      "is [MASK]\n",
+      "\n",
+      "Language Model\n",
+      "\n",
+      "Pre-training data\n",
+      "\n",
+      "Toronto\n",
+      "\n",
+      "Ottawa\n",
+      "\n",
+      "Subject\n",
+      "\n",
+      "Object\n",
+      "\n",
+      "Count\n",
+      "\n",
+      "Canada\n",
+      "\n",
+      "Toronto\n",
+      "\n",
+      "246\n",
+      "\n",
+      "Canada\n",
+      "\n",
+      "Ottawa\n",
+      "\n",
+      "19\n",
+      "\n",
+      "…\n",
+      "\n",
+      "…\n",
+      "\n",
+      "…\n",
+      "\n",
+      "Canada\n",
+      "\n",
+      "London\n",
+      "\n",
+      "8\n",
+      "\n",
+      "cuts relying on spurious features rather than understanding language (Wallace et al., 2019; McCoy et al., 2019; Poerner et al., 2020; Ettinger, 2020; Kassner and Schütze, 2020; Cao et al., 2021; Elazar et al., 2021; Bender et al., 2021). We suspect that relying on co-occurrence statistics of the pre-training corpora is one of the main factors that cause such behaviors (Razeghi et al., 2022; Li et al., 2022; Elazar et al., 2022; Kandpal et al., 2023; Kazemi et al., 2023).\n",
+      "\n",
+      "In this work, we investigate the effects of cooccurrence statistics of the pre-training data on factual knowledge in LLMs. First, we adopt the LAMA dataset (Petroni et al., 2019) to probe factual knowledge, represented as a subject-relationobject triple. Then, we analyze the correlation between co-occurrence statistics and performance on\n",
+      "\n",
+      "factual knowledge probing. Specifically, we count co-occurrences of word pairs in the pre-training corpora. We focus on subject-object co-occurrence, motivated by the concept of distant supervision, which shows that a sentence often contains the triple if it contains a subject and an object of a triple (Mintz et al., 2009). Figure 1 illustrates an overall framework of our correlation analysis between cooccurrence counts and factual knowledge of LLMs. We hypothesize that the target model would generate the most frequently co-occurring word if it heavily relies on co-occurrence. In this simulated example, given the fact 'Canada'-'capital'-'Ottawa', the target model generates the most frequently cooccurring word 'Toronto', which is not the correct answer.\n",
+      "\n",
+      "We test our hypothesis with GPT-Neo (Black et al., 2021) and GPT-J (Wang and Komatsuzaki, 2021), which are open-source versions of GPT-3 (Brown et al., 2020). We compute co-occurrence statistics of the Pile dataset (Gao et al., 2020), on which the target models are pre-trained. We show that the factual probing accuracy of LLMs highly correlates with subject-object co-occurrence, leading to failures in recalling rare facts. Although scaling up model sizes or finetuning boosts the overall performance on factual knowledge probing, they do not resolve co-occurrence bias, in which frequently co-occurred words are preferred over the correct answer. Besides, we find that a significant portion of facts in the LAMA dataset can be recalled by simply generating the object with the highest co-occurrence count. Although cooccurrence is necessary to recall factual knowledge, it is not sufficient. Therefore, relying heavily on co-occurrence is inappropriate for understanding the accurate meaning behind words.\n",
+      "\n",
+      "Relying heavily on the co-occurrence statistics may lead to hallucinations (Fish, 2009; Maynez et al., 2020; Ji et al., 2023) if the co-occurrence statistics reflect factually incorrect information. Therefore, we suggest finetuning LLMs on the debiased LAMA, constructed by filtering out biased samples whose subject-object co-occurrence count is high. Although finetuning on the debiased dataset allows LLMs to learn rare facts that appear in the training set, it is not generalizable to test cases.\n",
+      "\n",
+      "In summary, we show that factual knowledge probing accuracy correlates with subject-object co-occurrence. In addition, we present novel ev-\n",
+      "\n",
+      "idence and insights by providing a more detailed picture. Specifically, we demonstrate that LLMs prefer frequently co-occurring words, which often override the correct answer, especially when the correct answer rarely co-occurs with the subject. While existing studies only show that the performance of LLMs correlates with co-occurrence, our results provide evidence and reasons for that. We hope our results spur future work on mitigating co-occurrence bias to build accurate and reliable language models.\n",
+      "\n",
+      "2 Related Work\n",
+      "\n",
+      "2.1 Prompt Tuning and Finetuning\n",
+      "\n",
+      "There have been recent attempts to tune input prompts to improve the performance of LLMs further (Liu et al., 2023b; Lester et al., 2021; Li and Liang, 2021; Qin and Eisner, 2021; Liu et al., 2022, 2023a). However, directly optimizing prompts is not trivial since changes in the input space may cause non-monotonic performance changes (Hu et al., 2022). Especially, Fichtel et al. (2021) demonstrate that finetuned LMs outperform prompt-tuned LMs on factual knowledge probing tasks. Although LLMs, such as GPT-3 and T0, were primitively designed to perform well on various tasks without finetuning (Brown et al., 2020; Sanh et al., 2022), recent work shows that finetuning improves the linguistic capabilities of LLMs substantially (Ouyang et al., 2022; Wei et al., 2022). Therefore, we consider finetuned LMs for analysis.\n",
+      "\n",
+      "2.2 Term Frequency and Model Behaviors\n",
+      "\n",
+      "There have been several approaches to understanding the effects of training data on model behaviors. Specifically, recent studies observe a correlation between pre-training term frequency and model behaviors (Kassner et al., 2020; Wei et al., 2021; Li et al., 2022; Razeghi et al., 2022; Kandpal et al., 2023; Elazar et al., 2022). Our work offers unique contributions by providing additional evidence and insights with in-depth analysis. Specifically, we verify that (1) LLMs learn co-occurrence bias from the pre-training data, preferring frequently co-occurred words over the correct answer, which is especially problematic when recalling rare facts, and (2) co-occurrence bias is not overcome either by scaling up model sizes or finetuning.\n",
+      "\n",
+      "2.3 Spurious Features\n",
+      "\n",
+      "A spurious correlation refers to a relationship in which variables are correlated but does not imply causation due to a coincidence or a confounding factor (Simon, 1954). LMs often learn shortcuts relying on spurious features, such as word overlap, type matching, misprimes, and surface form, which mostly come from dataset bias (Gururangan et al., 2018; McCoy et al., 2019; Wallace et al., 2019; Kassner and Schütze, 2020; Poerner et al., 2020; Wang et al., 2022). For example, if a heuristic (e.g. word overlap, surface form) frequently cooccurs with specific labels, the models may learn the shortcut relying on the heuristic to make decisions. Although spurious features may be helpful in generating plausible responses, it is not appropriate for accurate semantic understanding. Our work suggests that co-occurrence statistics of the pre-training data may work as spurious features, causing hallucinations (Fish, 2009; Maynez et al., 2020; Ji et al., 2023) or biased responses (Bolukbasi et al., 2016; Caliskan et al., 2017; Bommasani et al., 2021).\n",
+      "\n",
+      "2.4 Memorization\n",
+      "\n",
+      "LLMs have been shown to memorize information in training data and generate it verbatim at test time (Emami et al., 2020; Feldman and Zhang, 2020; McCoy et al., 2023; Zhang et al., 2021; Lee et al., 2022; Akyurek et al., 2022; Magar and Schwartz, 2022; Carlini et al., 2023). Memorization implies that LLMs recall memorized information rather than generalizing to new inputs based on learned knowledge. Although recent studies indicate that memorization poses privacy risks (Song and Shmatikov, 2019; Carlini et al., 2019, 2021; Kandpal et al., 2022), it is necessary for nearoptimal generalization when learning from a longtail distribu...\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Assuming docling_data was loaded already\n",
+    "full_paper_text = reconstruct_full_paper(docling_data)\n",
+    "\n",
+    "print(\"🧾 Full paper preview (first 10000 characters):\")\n",
+    "print(full_paper_text[:10000] + \"...\" if len(full_paper_text) > 10000 else full_paper_text)"
+   ]
   }
  ],
  "metadata": {
